--- a/client/client-electron/package.json
+++ b/client/client-electron/package.json
@@ -106,7 +106,8 @@
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
