--- a/client/client-electron/package.json
+++ b/client/client-electron/package.json
@@ -95,11 +95,10 @@
     }
   },
   "dependencies": {
-
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
-
+    "koffi": "^2.3.20",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
