--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "buffer": "^6.0.3",
     "concurrent": "^0.3.2",
     "concurrently": "^8.0.1",
+    "jquery": "^3.7.0",
     "koffi": "^2.3.20",
     "notistack": "^2.0.5",
     "peerjs": "^1.4.7",
@@ -51,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.16"
   }
 }
